[package]
name = "blg"
version = "2.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
pyo3 = { version = "0.24.2", features = ["extension-module"] }
quick-xml = { version = "0.37.1" }
serde = { version = "1.0.219", features = ["derive"] }

[lib]
name = "blg"
crate-type = ["cdylib"]
